# attio-sheets-sync

./: README.md
app/: .clasp.json  .clasp.json.example  README.md  braindump.md  package-lock.json  package.json
app/src/: Code.js  appsscript.json
backend/: .env.example  .gcloudignore  .gitignore  README.md  cli.py  cloudbuild.yaml  main.py  profile_memory.py  pyproject.toml  requirements.txt  sheets_write.py  test_function.py  test_memory.py
