[project]
name = "sheets-sync"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dominic Eccleston", email = "domeccleston@gmail.com"},
]
dependencies = [
    "functions-framework>=3.8.2",
    "requests>=2.31.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "functions-framework --target process_spreadsheet --debug"
test = "python test_function.py"
requirements = "pdm export -f requirements --no-hashes --prod -o requirements.txt"
logs = "gcloud functions logs read process-spreadsheet-large-v2 --gen2 --region europe-west1 --project attio-sheets-sync --limit 50"
deploy = """
gcloud functions deploy process-spreadsheet-large-v2 \
    --gen2 \
    --runtime python311 \
    --region europe-west1 \
    --source . \
    --entry-point process_spreadsheet \
    --trigger-http \
    --allow-unauthenticated \
    --project attio-sheets-sync \
    --memory 1024MB \
    --timeout 540s
"""

[tool.pdm.dev-dependencies]
test = [
    "requests>=2.31.0",
]
